docs(demo): use Gardevoir CDN; fix button type | style: comment in English | chore: remove VSCode launch

--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Reseter.css Demo</title>
-  <link rel="stylesheet" href="reseter.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gardevoir" />
   <style>
     body { padding: 2rem; font-family: sans-serif; }
     section { margin-bottom: 2rem; }
@@ -25,13 +25,13 @@
     <form>
       <label>Nome: <input type="text" /></label><br><br>
       <label>Email: <input type="email" /></label><br><br>
-      <button>Enviar</button>
+      <button type="button">Enviar</button>
     </form>
   </section>
 
   <section>
     <h2>Botões e Tipografia</h2>
-    <button>Clique Aqui</button>
+    <button type="button">Clique Aqui</button>
     <p>Texto comum</p>
     <strong>Texto em negrito</strong>
     <em>Texto em itálico</em>
